--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
     <title>Barra de Porcentaje</title>
 </head>
 <body>
-    <div>
-        <header>Percentage Bar</header>
-        <main>soy la barra de porcentaje</main>
-        <ul class="description">
-            <li class="label1">Label 1 (43%)</li>
-            <li class="label2">Label 2 (28%)</li>
-            <li class="label3">Label 3 (17%)</li>
-            <li class="label4">Label 4 (12%)</li>
-        </ul>
+    <div class="page-wrap">
+        <h2>Percentage Bar</h2>
+        <div class="skill-bar-container">
+            <span class="skill-name">Label 1</span>
+            <span class="skill-percent">100%</span>
+            <span class="skill-bar level5"></span>
+        </div>
+        <div class="skill-bar-container">
+            <span class="skill-name">Label 2</span>
+            <span class="skill-percent">80%</span>
+            <span class="skill-bar level4"></span>
+        </div>
+        <div class="skill-bar-container">
+            <span class="skill-name">Label 3</span>
+            <span class="skill-percent">60%</span>
+            <span class="skill-bar level3"></span>
+        </div>
+        <div class="skill-bar-container">
+            <span class="skill-name">Label 4</span>
+            <span class="skill-percent">40%</span>
+            <span class="skill-bar level2"></span>
+        </div>
+        <div class="skill-bar-container">
+            <span class="skill-name">Label 5</span>
+            <span class="skill-percent">20%</span>
+            <span class="skill-bar level1"></span>
+        </div>
     </div>
 </body>
 </html>
